--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,5 +2,9 @@
     "about": "About",
     "profile": "Profile",
     "grades": "Grades",
-    "signout": "Sign out"
+    "signout": "Sign out",
+    "message": "Message",
+    "details": "Details",
+    "blogposts": "Blog posts",
+    "emblems": "Emblems"
 }
