task(internationalization): Bottom bar strings moved to i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,5 +15,6 @@
     "notificationpreferences": "Notification preferences",
     "email": "Email",
     "general": "General",
-    "useentertosend": "Use enter to send"
+    "useentertosend": "Use enter to send",
+    "dashboard": "Dashboard"
 }
