task(internationalization): Course pages strings moved to i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,5 +16,8 @@
     "email": "Email",
     "general": "General",
     "useentertosend": "Use enter to send",
-    "dashboard": "Dashboard"
+    "dashboard": "Dashboard",
+    "activities": "Activities",
+    "participants": "Participants",
+    "openexternalactivity": "Open external activity"
 }
