task(internationalization): Register page strings moved to i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,5 +23,8 @@
     "login": "Log in",
     "username": "Username",
     "password": "Password",
-    "createanewaccount": "Create a new account"
+    "firstname": "First name",
+    "lastname": "Last name",
+    "createanewaccount": "Create a new account",
+    "register": "Register"
 }
