task(internationalization): Block recentlyaccessedcourses strings moved to i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,5 +26,6 @@
     "firstname": "First name",
     "lastname": "Last name",
     "createanewaccount": "Create a new account",
-    "register": "Register"
+    "register": "Register",
+    "recentlyaccessedcourses": "Recently accessed courses"
 }
